--- a/players.html
+++ b/players.html
@@ -141,48 +141,368 @@
   <!-- PLAYER BIOS and CIRCLE PICS -->
   <div class="container-fluid animate-box">
     <div class="container" style="padding: 60px">
-      <div class="table-responsive">
-        <table>
-          <tr>
-            <td style="padding: 10px">
-              <div class="player-name">Harry Styles</div>
-              <img class="center-crop pull-left gradient" src="images/player.png">
-            </td>
-            <td style="padding: 10px">
-              <h5 style="font-weight: 300">HARRY STYLES</h5>
-              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                Hendrerit efficiantur ex usu, duo id wisi magna.<hr class="short" style="margin-left: 0">Team: <a href="teams.html">FaZe Clan</a>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td style="padding: 10px">
-              <div class="player-name">Harry Styles</div>
-              <img class="center-crop pull-left gradient" src="images/player2.png">
-            </td>
-            <td style="padding: 10px">
-              <h5 style="font-weight: 300">BERT BILLINGS</h5>
-              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                Hendrerit efficiantur ex usu, duo id wisi magna.<hr class="short" style="margin-left: 0">Team: <a href="teams.html">FaZe Clan</a></p>
-            </td>
-          </tr>
-          <!-- <tr>
-                <td style="padding: 10px"><div class="player-name">Harry Styles</div><img class="center-crop pull-left gradient" src="images/player.png"></td>
-                <td style="padding: 10px"><h5 style="font-weight: 300">HARRY STYLES</h5><p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse. Hendrerit
-                  efficiantur ex usu, duo id wisi magna.</p></td>
-              </tr>
-              <tr>
-                  <td style="padding: 10px"><div class="player-name">Harry Styles</div><img class="center-crop pull-left gradient" src="images/player.png"></td>
-                  <td style="padding: 10px"><h5 style="font-weight: 300">HARRY STYLES</h5><p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse. Hendrerit
-                    efficiantur ex usu, duo id wisi magna.</p></td>
-                </tr> -->
+
+      <!-- <div id="wrap"> -->
+      <div class="container">
+        <h3>Players</h3>
+        <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Team</th>
+              <th>Name</th>
+              <th>Global Points</th>
+              <th>Total Scores</th>
+              <th>Total Kills</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+            <tr class="gradeX">
+              <td>
+                <a href="teams.html">FaZe Clan</a></td>
+              <td>
+                Dave Dudebody
+              </td>
+              <td>95,000,000</td>
+              <td class="center">32</td>
+              <td class="center">664</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <th>Team</th>
+              <th>Name</th>
+              <th>Global Points</th>
+              <th>Total Scores</th>
+              <th>Total Kills</th>
+            </tr>
+          </tfoot>
         </table>
-        <div class="page-title text-center">
-          <h5 style="color:#000; padding: 20px; width: 200px; margin: 60px auto; border: solid 1px rgb(0,0,0)">LOAD MORE</h5>
-        </div>
       </div>
+      <!-- </div> -->
+
     </div>
   </div>
+
   <!-- PLAYER BIOS and CIRCLE PICS -->
 
   <div class="container-fluid fh5co_footer_right_reserved">
@@ -283,5 +603,27 @@
   <script src="js/jquery.waypoints.min.js"></script>
   <!-- Main -->
   <script src="js/main.js"></script>
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js"></script>
+  <script src="js/datatables/datatables.js"></script>
+  <!-- <script type="text/javascript">
+    $(document).ready(function () {
+      $('.datatable').dataTable({
+        "sPaginationType": "bs_four_button"
+      });
+      $('.datatable').each(function () {
+        var datatable = $(this);
+     
+        var search_input = datatable.closest('.dataTables_wrapper').find('div[id$=_filter] input');
+        search_input.attr('placeholder', 'Search');
+        search_input.addClass('form-control input-sm');
+    
+        var length_sel = datatable.closest('.dataTables_wrapper').find('div[id$=_length] select');
+        length_sel.addClass('form-control input-sm');
+      });
+    });
+
+  </script> -->
+
 
 </body>
