--- a/sponsors.html
+++ b/sponsors.html
@@ -27,53 +27,6 @@
 </head>
 
 <body class="single">
-  <!-- <div class="container-fluid">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-3 fh5co_padding_menu">
-          <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        </div>
-        <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-linkedin"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-google-plus"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-twitter"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-facebook"></i>
-              </div>
-            </a>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-    </div>
-  </div> -->
   <div class="container-fluid fh5co_padd_mediya padding_786">
     <div class="container padding_786">
       <nav class="navbar navbar-toggleable-md navbar-light ">
@@ -107,7 +60,7 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item active">
+            <!-- <li class="nav-item ">
               <a class="nav-link" href="players.html">Player Bios
                 <span class="sr-only">(current)</span>
               </a>
@@ -117,7 +70,7 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li> -->
-            <!-- <li class="nav-item ">
+            <!-- <li class="nav-item active">
               <a class="nav-link" href="contact.html">Contact
                 <span class="sr-only">(current)</span>
               </a>
@@ -131,22 +84,15 @@
     <div class="container">
       <div class="row">
         <a href="#" class="fh5co_con_123">
-          <i class="fa fa-users"></i>
+          <i class="fa fa-home"></i>
         </a>
-        <a href="#" class="fh5co_con pt-2"> Teams </a>
+        <a href="#" class="fh5co_con pt-2"> About Us </a>
       </div>
     </div>
   </div>
-
-  <!-- PLAYER BIOS and CIRCLE PICS -->
-  <div class="container-fluid animate-box">
+  <div class="container-fluid">
     <div class="container" style="padding: 60px">
-      <div class="row">
-        <a href="#" class="circle">
-          <img src="images/clan.png">
-        </a>
-        <h1>FaZe Clan</h1>
-      </div>
+      <h1>Our Team</h1>
       <div class="row">
         <div class="col-md-6">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
@@ -160,85 +106,48 @@
             Nulla accumsan nisl sapien</p>
         </div>
       </div>
-      <hr class="short" style="margin-left: 0px"> Based in: United States</p>
-
-      <!-- <div id="wrap"> -->
-      <div class="container">
-        <h3>Team Members</h3>
-        <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Global Points</th>
-              <th>Total Scores</th>
-              <th>Total Kills</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-            <tr class="gradeX">
-              <td>
-<a href="players.html">Dave Dudebody</a>
-              </td>
-              <td>95,000,000</td>
-              <td class="center">32</td>
-              <td class="center">664</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <th>Name</th>
-              <th>Global Points</th>
-              <th>Total Scores</th>
-              <th>Total Kills</th>
-            </tr>
-          </tfoot>
+      <div class="table-responsive">
+        <table>
+          <tr>
+            <td style="padding: 10px">
+              <div class="fh5co_con_1234">
+                <i class="fa fa-user"></i>
+              </div>
+            </td>
+            <td style="padding: 10px">
+              <h5 style="font-weight: 300">Gerard Kelly</h5>
+              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
+                Hendrerit efficiantur ex usu, duo id wisi magna.</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 10px">
+              <div class="fh5co_con_1234">
+                <i class="fa fa-user"></i>
+              </div>
+            </td>
+            <td style="padding: 10px">
+              <h5 style="font-weight: 300">Britanni Johnson</h5>
+              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
+                Hendrerit efficiantur ex usu, duo id wisi magna.</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 10px">
+              <div class="fh5co_con_1234">
+                <i class="fa fa-user"></i>
+              </div>
+            </td>
+            <td style="padding: 10px">
+              <h5 style="font-weight: 300">Person Number 3</h5>
+              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
+                Hendrerit efficiantur ex usu, duo id wisi magna.</p>
+            </td>
+          </tr>
         </table>
       </div>
-      <!-- </div> -->
-
     </div>
   </div>
-  <!-- PLAYER BIOS and CIRCLE PICS -->
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
@@ -336,7 +245,17 @@
     crossorigin="anonymous"></script>
   <!-- Waypoints -->
   <script src="js/jquery.waypoints.min.js"></script>
+  <!-- Parallax -->
+  <script src="js/jquery.stellar.min.js"></script>
   <!-- Main -->
   <script src="js/main.js"></script>
+  <script>
+    if (!navigator.userAgent.match(/Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i)) {
+      $(window).stellar();
+    }
+
+  </script>
 
 </body>
+
+</html>
