--- a/single.html
+++ b/single.html
@@ -113,7 +113,7 @@
               <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
                 Hendrerit efficiantur ex usu, duo id wisi magna.</p>
               <hr class="short" style="margin-left: 0px">
-              <h4><a href="sponsors.html">Sponsors</a></h4>
+              <h4><a href="about.html">Sponsors</a></h4>
               <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
                 Hendrerit efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
                 mei, at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
