--- a/events.html
+++ b/events.html
@@ -87,7 +87,7 @@
   <div class="container padding">
     <div class="row">
 
-      <div class="col-12 col-md-9 py-4 Reserved">
+      <div class="col-12 col-md-12 py-4 Reserved">
         <div class="container-fluid pb-4 pt-4 paddding">
           <div class="row mx-0">
             <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
@@ -279,7 +279,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-3 py-4 Reserved">
+      <!-- <div class="col-12 col-md-3 py-4 Reserved">
         <div class="container-fluid pb-4 pt-4 paddding">
           <div class="container paddding">
 
@@ -359,7 +359,7 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
